--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title></title>
 </head>
 <body>
+	
 	<h1><strong>Soneto da fidelidade</strong></h1>
-	Que tudo ao amor serei atento
+	<p id="text">Que tudo ao amor serei atento
 	Antes, e com tal zelo e sempre tanto
 	Que mesmo em face do maior encanto
 	Dele se encante o meu pensamento
@@ -18,7 +19,8 @@
 	Quem sabe a solidão, fim de quem ama
 	Eu posso dizer do amor que tive
 	Que não seja imortal, posto que é chama
-	Mas que seja infinito enquanto dure.
+	Mas que seja infinito enquanto dure.</p>
+
 	<h2><strong>Vinicius de Moraes</strong></h2>
 </body>
 </html>
