--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="estilo.css">
 	<title></title>
 </head>
 <body>
 	
-	<h1><strong>Soneto da fidelidade</strong></h1>
-	<p id="text">Que tudo ao amor serei atento
-	Antes, e com tal zelo e sempre tanto
-	Que mesmo em face do maior encanto
-	Dele se encante o meu pensamento
-	Quero volve-lo em cada vão momento
-	E em seu louvor espalhar meu canto
-	Rir meu riso e derramar meu pranto
-	Em seu pesar e em seu contentamento
-	E assim, quando mais tarde me procure
-	Quem sabe a morte, angustia de quem vive
-	Quem sabe a solidão, fim de quem ama
-	Eu posso dizer do amor que tive
-	Que não seja imortal, posto que é chama
-	Mas que seja infinito enquanto dure.</p>
+	
+	<center><h1><strong>Soneto da fidelidade</strong></h1>
+	<p id="text">Que tudo ao amor serei atento<br>
+	Antes, e com tal zelo e sempre tanto<br>
+	Que mesmo em face do maior encanto<br>
+	Dele se encante o meu pensamento<br>
+	Quero volve-lo em cada vão momento<br>
+	E em seu louvor espalhar meu canto<br>
+	Rir meu riso e derramar meu pranto<br>
+	Em seu pesar e em seu contentamento<br>
+	E assim, quando mais tarde me procure<br>
+	Quem sabe a morte, angustia de quem vive<br>
+	Quem sabe a solidão, fim de quem ama<br>
+	Eu posso dizer do amor que tive<br>
+	Que não seja imortal, posto que é chama<br>
+	Mas que seja infinito enquanto dure.</p></center>
 
-	<h2><strong>Vinicius de Moraes</strong></h2>
+	<div align="center"><h3><b>Vinicius de Morais</b></h3></div>
 </body>
 </html>
