--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	
 	<center><h1><strong>Soneto da fidelidade</strong></h1>
-	<p id="text">Que tudo ao amor serei atento<br>
+	<p>Que tudo ao amor serei atento<br>
 	Antes, e com tal zelo e sempre tanto<br>
 	Que mesmo em face do maior encanto<br>
 	Dele se encante o meu pensamento<br>
@@ -23,6 +23,6 @@
 	Que não seja imortal, posto que é chama<br>
 	Mas que seja infinito enquanto dure.</p></center>
 
-	<div align="center"><h3><b>Vinicius de Morais</b></h3></div>
+	<div align="center"  id="text"><h3><b>Vinicius de Morais</b></h3></div>
 </body>
 </html>
