--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
 	Mas que seja infinito enquanto dure.</p></center>
 
 	<div align="center"  id="text"><h3><b>Vinicius de Morais</b></h3></div>
+	<tr>
+        <th rowspan="2">celula 1</th>
+        <th>celula 2</th>
+        <th>celula 3</th>
+        <th>celula 4</th>
+    </tr>
 </body>
 </html>
