--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<Center><img id="imag" src="https://abrilveja.files.wordpress.com/2016/06/alx_meme-nicolas-cage-04_original.jpeg?quality=70&strip=info&w=500" alt="200px"></Center>
 	<link rel="stylesheet" href="estilo.css">
 	<title></title>
 </head>
