--- a/index.html
+++ b/index.html
@@ -24,11 +24,64 @@
 	Mas que seja infinito enquanto dure.</p></center>
 
 	<div align="center"  id="text"><h3><b>Vinicius de Morais</b></h3></div>
-	<tr>
-        <th rowspan="2">celula 1</th>
-        <th>celula 2</th>
-        <th>celula 3</th>
-        <th>celula 4</th>
-    </tr>
+	
+	<table>
+		<tr>
+			<th>PROCESSADOR</th>
+			<th>VELOCIDADE<br></th>
+			<th>celula 3</th>
+			<th>celula 4</th>
+			<th>celula 2</th>
+			<th>celula 3</th>
+		</tr>
+		<tr>
+			<td>celula 1</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+			<td>celula 4</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+		</tr>
+		<tr>
+			<td>celula 1</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+			<td>celula 4</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+		</tr>
+		<tr>
+			<td>celula 1</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+			<td>celula 4</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+		</tr>
+		<tr>
+			<td>celula 1</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+			<td>celula 4</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+		</tr>
+		<tr>
+			<td>celula 1</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+			<td>celula 4</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+		</tr>
+		<tr>
+			<td>celula 1</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+			<td>celula 4</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
+		</tr>
+	</table>
 </body>
 </html>
