--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 	<table>
 		<tr>
 			<th>PROCESSADOR</th>
-			<th>VELOCIDADE<br>(MHz)</th>
-			<th>PROÇO DE<br>lançamento</th>
-			<th>data de<br>lançamento</th>
-			<th>preço em<br>agosto/2000</th>
-			<th>queda<br>%</th>
+			<th>VELOCIDADE<br></th>
+			<th>celula 3</th>
+			<th>celula 4</th>
+			<th>celula 2</th>
+			<th>celula 3</th>
 		</tr>
 		<tr>
-			<td>200</td>
-			<td>315</td>
-			<td>abril/97</td>
+			<td>celula 1</td>
+			<td>celula 2</td>
+			<td>celula 3</td>
 			<td>celula 4</td>
 			<td>celula 2</td>
 			<td>celula 3</td>
@@ -83,5 +83,7 @@
 			<td>celula 3</td>
 		</tr>
 	</table>
+
+		
 </body>
 </html>
